// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listContent Tests Check listing all content without filters 1`] = `
[
  {
    "author": "Alice Smith",
    "content": "# JavaScript Closures

Closures are an important concept in JavaScript, enabling powerful patterns for scoping and memory management.",
    "date": "2024-08-12",
    "slug": "blog-1",
    "tags": [
      "JavaScript",
      "Programming",
    ],
    "title": "Understanding JavaScript Closures",
    "type": "blog",
  },
  {
    "author": "John Doe",
    "content": "# AI in Healthcare

Artificial intelligence is transforming the healthcare industry by improving diagnosis, treatment, and patient care.",
    "date": "2024-08-18",
    "slug": "blog-2",
    "tags": [
      "AI",
      "Healthcare",
    ],
    "title": "The Future of AI in Healthcare",
    "type": "blog",
  },
  {
    "author": "Jane Doe",
    "content": "# Mastering CSS

CSS is a crucial part of web development, and improving your skills can significantly enhance your front-end development.",
    "date": "2024-09-01",
    "slug": "blog-3",
    "tags": [
      "CSS",
      "Web Development",
    ],
    "title": "How to Improve Your CSS Skills",
    "type": "blog",
  },
  {
    "content": "# Python for Data Science

Python is the go-to programming language for data science due to its simplicity and the vast array of libraries available.",
    "slug": "blog-4",
    "type": "blog",
  },
  {
    "author": "Sarah Brown",
    "content": "# Productivity Tips

This content includes special characters: @#$%^&().",
    "date": "2024-09-05",
    "slug": "blog-5",
    "tags": [
      "Productivity",
      "Developers",
    ],
    "title": "Special @#$% Characters!",
    "type": "blog",
  },
  {
    "category": "Electronics",
    "content": "# SuperFast Laptop

A high-performance laptop designed for professionals who need speed and reliability.",
    "price": "$999",
    "releaseDate": "2024-07-10",
    "slug": "product-1",
    "tags": [
      "laptop",
      "electronics",
      "featured",
    ],
    "title": "SuperFast Laptop",
    "type": "product",
  },
  {
    "category": "Accessories",
    "content": "# Eco-Friendly Water Bottle

Stay hydrated with this eco-friendly, reusable water bottle, perfect for on-the-go lifestyles.",
    "price": "$25",
    "releaseDate": "2024-06-15",
    "slug": "product-2",
    "tags": [
      "water bottle",
      "eco-friendly",
    ],
    "title": "Eco-Friendly Water Bottle",
    "type": "product",
  },
  {
    "category": "Audio",
    "content": "# Noise-Canceling Headphones

Experience immersive sound with our noise-canceling headphones, ideal for music lovers and travelers.",
    "price": "$199",
    "releaseDate": "2024-08-01",
    "slug": "product-3",
    "tags": [
      "headphones",
      "audio",
    ],
    "title": "Noise-Canceling Headphones",
    "type": "product",
  },
  {
    "category": "Home Security",
    "content": "# Smart Home Security

Secure your home with our easy-to-install smart security system, controlled via mobile app.",
    "price": "$299",
    "releaseDate": "2024-09-01",
    "slug": "product-4",
    "tags": [
      "home security",
      "smart home",
    ],
    "title": "Smart Home Security System",
    "type": "product",
  },
  {
    "category": "Furniture",
    "content": "# Electric Standing Desk

Boost your productivity with an adjustable standing desk, designed for comfort and ergonomics.",
    "price": "$450",
    "releaseDate": "2024-07-20",
    "slug": "product-5",
    "tags": [
      "desk",
      "office",
      "standing",
    ],
    "title": "Electric Standing Desk using Javascript",
    "type": "product",
  },
  {
    "category": "Development",
    "content": "# Website Development

We provide custom website development services tailored to your business needs, from small businesses to large enterprises.",
    "priceRange": "$1000 - $5000",
    "slug": "service-1",
    "tags": [
      "web development",
      "services",
    ],
    "title": "Website Development",
    "type": "service",
  },
  {
    "category": "Marketing",
    "content": "",
    "priceRange": "$800 - $4000",
    "slug": "service-2",
    "tags": [
      "digital marketing",
      "services",
    ],
    "title": "Digital Marketing Strategy",
    "type": "service",
  },
  {
    "category": "SEO",
    "content": "# SEO Optimization

Optimize your website for search engines and improve your ranking with our proven SEO services.",
    "priceRange": "$500 - $2000",
    "slug": "service-3",
    "tags": [
      "SEO",
      "services",
    ],
    "title": "SEO Optimization using Javascript",
    "type": "service",
  },
  {
    "category": "Development",
    "content": "# Mobile App Development

We create powerful and user-friendly mobile applications to help you reach your audience on iOS and Android.",
    "priceRange": "$3000 - $10000",
    "slug": "service-4",
    "tags": [
      "mobile development",
      "services",
    ],
    "title": "Mobile App Development",
    "type": "service",
  },
  {
    "category": "Hosting",
    "content": "# Cloud Hosting Solutions

Reliable and scalable cloud hosting solutions designed to meet the demands of your growing business.",
    "priceRange": "$150 - $1000/month",
    "slug": "service-5",
    "tags": [
      "cloud hosting",
      "services",
    ],
    "title": "Cloud Hosting Solutions",
    "type": "service",
  },
]
`;

exports[`listContent Tests Filter content by keyword in title 1`] = `
[
  {
    "author": "Alice Smith",
    "content": "# JavaScript Closures

Closures are an important concept in JavaScript, enabling powerful patterns for scoping and memory management.",
    "date": "2024-08-12",
    "slug": "blog-1",
    "tags": [
      "JavaScript",
      "Programming",
    ],
    "title": "Understanding JavaScript Closures",
    "type": "blog",
  },
  {
    "category": "Furniture",
    "content": "# Electric Standing Desk

Boost your productivity with an adjustable standing desk, designed for comfort and ergonomics.",
    "price": "$450",
    "releaseDate": "2024-07-20",
    "slug": "product-5",
    "tags": [
      "desk",
      "office",
      "standing",
    ],
    "title": "Electric Standing Desk using Javascript",
    "type": "product",
  },
  {
    "category": "SEO",
    "content": "# SEO Optimization

Optimize your website for search engines and improve your ranking with our proven SEO services.",
    "priceRange": "$500 - $2000",
    "slug": "service-3",
    "tags": [
      "SEO",
      "services",
    ],
    "title": "SEO Optimization using Javascript",
    "type": "service",
  },
]
`;

exports[`listContent Tests Filter content by keywords 1`] = `
[
  {
    "author": "Alice Smith",
    "content": "# JavaScript Closures

Closures are an important concept in JavaScript, enabling powerful patterns for scoping and memory management.",
    "date": "2024-08-12",
    "slug": "blog-1",
    "tags": [
      "JavaScript",
      "Programming",
    ],
    "title": "Understanding JavaScript Closures",
    "type": "blog",
  },
]
`;

exports[`listContent Tests Filter content by meta key 1`] = `
[
  {
    "author": "Alice Smith",
    "content": "# JavaScript Closures

Closures are an important concept in JavaScript, enabling powerful patterns for scoping and memory management.",
    "date": "2024-08-12",
    "slug": "blog-1",
    "tags": [
      "JavaScript",
      "Programming",
    ],
    "title": "Understanding JavaScript Closures",
    "type": "blog",
  },
]
`;

exports[`listContent Tests Filter content by type 1`] = `
[
  {
    "author": "Alice Smith",
    "content": "# JavaScript Closures

Closures are an important concept in JavaScript, enabling powerful patterns for scoping and memory management.",
    "date": "2024-08-12",
    "slug": "blog-1",
    "tags": [
      "JavaScript",
      "Programming",
    ],
    "title": "Understanding JavaScript Closures",
    "type": "blog",
  },
  {
    "author": "John Doe",
    "content": "# AI in Healthcare

Artificial intelligence is transforming the healthcare industry by improving diagnosis, treatment, and patient care.",
    "date": "2024-08-18",
    "slug": "blog-2",
    "tags": [
      "AI",
      "Healthcare",
    ],
    "title": "The Future of AI in Healthcare",
    "type": "blog",
  },
  {
    "author": "Jane Doe",
    "content": "# Mastering CSS

CSS is a crucial part of web development, and improving your skills can significantly enhance your front-end development.",
    "date": "2024-09-01",
    "slug": "blog-3",
    "tags": [
      "CSS",
      "Web Development",
    ],
    "title": "How to Improve Your CSS Skills",
    "type": "blog",
  },
  {
    "content": "# Python for Data Science

Python is the go-to programming language for data science due to its simplicity and the vast array of libraries available.",
    "slug": "blog-4",
    "type": "blog",
  },
  {
    "author": "Sarah Brown",
    "content": "# Productivity Tips

This content includes special characters: @#$%^&().",
    "date": "2024-09-05",
    "slug": "blog-5",
    "tags": [
      "Productivity",
      "Developers",
    ],
    "title": "Special @#$% Characters!",
    "type": "blog",
  },
]
`;

exports[`listContent Tests Filter content by type and meta 1`] = `
[
  {
    "category": "Audio",
    "content": "# Noise-Canceling Headphones

Experience immersive sound with our noise-canceling headphones, ideal for music lovers and travelers.",
    "price": "$199",
    "releaseDate": "2024-08-01",
    "slug": "product-3",
    "tags": [
      "headphones",
      "audio",
    ],
    "title": "Noise-Canceling Headphones",
    "type": "product",
  },
]
`;

exports[`listContent Tests Filter content matching in title 1`] = `[]`;

exports[`listContent Tests Sort 1`] = `
[
  {
    "title": "Website Development",
  },
  {
    "title": "Digital Marketing Strategy",
  },
  {
    "title": "SEO Optimization using Javascript",
  },
  {
    "title": "Mobile App Development",
  },
  {
    "title": "Cloud Hosting Solutions",
  },
  {
    "title": "SuperFast Laptop",
  },
  {
    "title": "Eco-Friendly Water Bottle",
  },
  {
    "title": "Noise-Canceling Headphones",
  },
  {
    "title": "Smart Home Security System",
  },
  {
    "title": "Electric Standing Desk using Javascript",
  },
  {
    "title": "Understanding JavaScript Closures",
  },
  {
    "title": "The Future of AI in Healthcare",
  },
  {
    "title": "How to Improve Your CSS Skills",
  },
  {
    "title": undefined,
  },
  {
    "title": "Special @#$% Characters!",
  },
]
`;

exports[`listContent Tests return title of all slugs 1`] = `
[
  {
    "title": "Cloud Hosting Solutions",
  },
  {
    "title": "Digital Marketing Strategy",
  },
  {
    "title": "Eco-Friendly Water Bottle",
  },
  {
    "title": "Electric Standing Desk using Javascript",
  },
  {
    "title": "How to Improve Your CSS Skills",
  },
  {
    "title": "Mobile App Development",
  },
  {
    "title": "Noise-Canceling Headphones",
  },
  {
    "title": "SEO Optimization using Javascript",
  },
  {
    "title": "Smart Home Security System",
  },
  {
    "title": "Special @#$% Characters!",
  },
  {
    "title": "SuperFast Laptop",
  },
  {
    "title": "The Future of AI in Healthcare",
  },
  {
    "title": "Understanding JavaScript Closures",
  },
  {
    "title": undefined,
  },
  {
    "title": "Website Development",
  },
]
`;
